--- a/package.json
+++ b/package.json
@@ -27,15 +27,20 @@
     "@storybook/nextjs": "^7.5.0",
     "@storybook/react": "^7.5.0",
     "@storybook/testing-library": "^0.2.2",
+    "@testing-library/dom": "^9.3.3",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.6",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "babel-jest": "^29.7.0",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "eslint-plugin-storybook": "^0.6.15",
     "jest": "^29.7.0",
+    "jest-css-modules": "^2.1.0",
     "jest-environment-jsdom": "^29.7.0",
     "storybook": "^7.5.0",
     "typescript": "latest"
